# VaultMind-AI

./: .gitignore  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/routes/: health.py  ingest.py  query.py
app/core/: config.py
docs/: ARCHITECTURE_DECISIONS.md  RAG.md
